<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ContactFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/ContactDescriere"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/title_background"
        android:gravity="center"
        android:text="@string/ContactTitle"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="72dp"
        android:text="@string/ContactNume"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ContactNumeHint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Subiecte"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/ContactSubiect"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="124dp"
        android:layout_height="58dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/send_button"
        android:drawableEnd="@drawable/ic_send"
        android:padding="20dp"
        android:text="@string/ContactTrimite"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

</androidx.constraintlayout.widget.ConstraintLayout>