<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".homeFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_txt"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/desc_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/homebtn_background"
        android:text="@string/desc_btn"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/favMenuBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/homebtn_background"
        android:text="@string/fav_btn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/desc_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/desc_btn"
        app:layout_constraintTop_toBottomOf="@+id/desc_btn" />

    <Button
        android:id="@+id/nou_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/homebtn_background"
        android:text="@string/nou_btn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/desc_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/desc_btn"
        app:layout_constraintTop_toBottomOf="@+id/favMenuBtn" />

    <Button
        android:id="@+id/contact_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/homebtn_background"
        android:text="@string/top_btn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/desc_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/desc_btn"
        app:layout_constraintTop_toBottomOf="@+id/nou_btn" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>