<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".bookListFragment">

    <!-- TODO: Update blank fragment layout -->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/BookListRecView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/book_background"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.563" />

    <ProgressBar
        android:id="@+id/booklistProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/BookListRecView" />

    <TextView
        android:id="@+id/errorTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="37dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/thBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/categorybtn"
            android:textAllCaps="false"
            android:textOff="@string/ThrillerCategory"
            android:textOn="@string/ThrillerCategory"
            android:visibility="visible" />

        <ToggleButton
            android:id="@+id/SFCat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/categorybtn"
            android:textAllCaps="false"
            android:textOff="@string/SFCategory"
            android:textOn="@string/SFCategory" />

        <ToggleButton
            android:id="@+id/FanCat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/categorybtn"
            android:textAllCaps="false"
            android:textOff="@string/FantasyCategory"
            android:textOn="@string/FantasyCategory" />

        <ToggleButton
            android:id="@+id/JurnalCat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/categorybtn"
            android:textAllCaps="false"
            android:textOff="@string/JurnalCategory"
            android:textOn="@string/JurnalCategory" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>